--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
